tests/NormalTests/paczka1/small_fuzzy/33922139.err
Error in line 5: Cut52Lch S650 20,23
Error in line 6: SJq S677 81,40
